--- a/config/config.yaml
+++ b/config/config.yaml
@@ -35,7 +35,8 @@ params:
   filter_multireads: "-f bam -F '(mapping_quality >= 30) and ([XS] == null)'" 
   bigwigs_ind: "--binSize 10"
   bigwigs_merged: "--binSize 10"
-  macs2_call_peaks_narrow_se: "-f BAM -g dm --call-summits"
-  macs2_call_peaks_broad_se: "-f BAM -g dm"
-  macs2_call_peaks_narrow_pe: "-f BAMPE -g dm --call-summits"
-  macs2_call_peaks_broad_pe: "-f BAMPE -g dm"
+  macs2_call_peaks_narrow: "-g dm --call-summits"
+  macs2_call_peaks_broad: "-g dm"
+  filter_peaks_by_replicates:
+    min_overlap: 10
+    replicate_threshold: 2
