--- a/workflow/envs/macs2_env.yaml
+++ b/workflow/envs/macs2_env.yaml
@@ -4,7 +4,7 @@ channels:
   - defaults
 dependencies:
   - python=3.10
-  - macs2>=2.2.9.1
+  - macs2=2.2.7.1
   - numpy=1.26.4
   - pip: 
     - "macs2 --no-binary=:all:" 
